Challenge9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: maktoumg
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: webnodb.maktoumg.net4255
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: webnodb-service
            port:
              number: 80
  - host: webdb.maktoumg.net4255
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: webdb-service
            port:
              number: 80
